# Cloud-and-fast-api

./: .gitignore  CLAUDE.md  README.md  chainlit.skill  main.py  openai-agents-sdk.skill
.claude/agents/: backend-architect.md  frontend-developer.md
.claude/commands/: commit-code.md
.claude/skills/: google-calendar-mcp.skill  microsoft-agent-framework.skill  ship-hero.skill  sqlmodel.skill
.claude/skills/chainlit/references/: actions.md  ask-user.md  auth.md  elements.md  integrations.md  lifecycle.md  messages.md  patterns.md  session.md  steps.md
.claude/skills/commit-code/: SKILL.md
.claude/skills/fastapi/assets/starter-project/: .env.example  main.py
.claude/skills/fastapi/assets/starter-project/app/: api.py  config.py  schemas.py
.claude/skills/fastapi/references/: advanced.md  auth.md  basics.md  database.md  dependencies.md  deployment.md  models.md  testing.md
.claude/skills/linkedin-post-creator/references/: algorithm-hacks.md  formatting-guide.md  hooks-library.md  post-templates.md
.claude/skills/microsoft-agent-framework/references/: workflows.md
.claude/skills/openai-agents-sdk/references/: agents.md  guardrails.md  handoffs.md  models.md  patterns.md  running.md  sessions.md  tools.md
.claude/skills/pytest/references/: basics.md  fixtures.md  markers.md  mocking.md  plugins.md
.claude/skills/ship-hero/references/: authentication.md  graphql-operations.md  webhooks.md
Milk-Tracking-App/: .gitignore  CLAUDE.md  PLAN.md  README.md
Milk-Tracking-App/agent/: .env.example  agent.py  chainlit_app.py  pyproject.toml  tools.py
Milk-Tracking-App/api/: .env.example  main.py  pyproject.toml
Milk-Tracking-App/api/app/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py  security.py
Milk-Tracking-App/api/app/routers/: auth.py  entries.py  reports.py  suppliers.py
Milk-Tracking-App/api/tests/: __init__.py  conftest.py  test_auth.py  test_entries.py  test_integration.py  test_reports.py  test_suppliers.py
SimpleAgentDemo/SimpleAgentDemo/: Program.cs  SimpleAgentDemo.csproj
n8n/: README.md  linkedpost.md
todoAgent/: .env.example  README.md  agent.py  chainlit_app.py  main.py  pyproject.toml  tools.py
todoApp/: .env.example  .gitignore  README.md  main.py  pyproject.toml
todoApp/app/: api.py  config.py  database.py  models.py  schemas.py
todoApp/tests/: conftest.py  test_todos.py
